objects/MMPJ_Ext_Vign_Audit__c.object
<CustomObject>
    <description>MMPJ Extranet Vigneron - used for Cognac</description>
    <fields>
        <fullName>MMPJ_Ext_Vign_BlobAccount__c</fullName>
        <label>BlobAccount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_BlobContainer__c</fullName>
        <label>BlobContainer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_BlobFile__c</fullName>
        <label>BlobFile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_CLE_HACCP_Spirit__c</fullName>
        <externalId>true</externalId>
        <label>Clé Spirit 1</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Date_audit__c</fullName>
        <label>Date de l&apos;audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Document__c</fullName>
        <label>Document</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Lien_vers_document__c</fullName>
        <formula>&quot;https://www.mmpjetmoi.fr/attachment/file/&quot;&amp;Id&amp;&quot;/&quot; &amp;   MMPJ_Ext_Vign_Livreur__r.Id   &amp; &quot;?type=audit&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lien vers document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Livreur__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Livreur</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MMPJ_Ext_Vign_Societe__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Viticulteur, Vigneron</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MMPJ_Ext_Vign_Societe__c</referenceTo>
        <relationshipLabel>Audits</relationshipLabel>
        <relationshipName>Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Nom_de_l_auditeur__c</fullName>
        <label>Nom de l&apos;auditeur</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Audit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MMPJ_Ext_Vign_Date_audit__c</columns>
        <columns>MMPJ_Ext_Vign_Livreur__c</columns>
        <columns>MMPJ_Ext_Vign_Nom_de_l_auditeur__c</columns>
        <columns>MMPJ_Ext_Vign_Document__c</columns>
        <columns>MMPJ_Ext_Vign_CLE_HACCP_Spirit__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <group>MMPJ_Ext_Vign_Global_PG_Cognac</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_AB</fullName>
        <columns>NAME</columns>
        <columns>MMPJ_Ext_Vign_BlobFile__c</columns>
        <columns>MMPJ_Ext_Vign_Document__c</columns>
        <columns>MMPJ_Ext_Vign_BlobAccount__c</columns>
        <columns>MMPJ_Ext_Vign_BlobContainer__c</columns>
        <columns>MMPJ_Ext_Vign_CLE_HACCP_Spirit__c</columns>
        <columns>MMPJ_Ext_Vign_Date_audit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All AB</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <label>N° Audit</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>